// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders inactive prefix 1`] = `
<Text
  style={
    Array [
      Object {
        "textAlignVertical": "top",
        "top": 2,
      },
      Object {
        "height": 24,
        "paddingRight": 8,
      },
      undefined,
      Object {
        "color": "black",
        "fontSize": 16,
        "textAlign": "left",
      },
    ]
  }
>
  a
</Text>
`;

exports[`renders inactive suffix 1`] = `
<Text
  style={
    Array [
      Object {
        "textAlignVertical": "top",
        "top": 2,
      },
      Object {
        "height": 24,
        "paddingLeft": 8,
      },
      undefined,
      Object {
        "color": "black",
        "fontSize": 16,
        "textAlign": "right",
      },
    ]
  }
>
  z
</Text>
`;

exports[`renders prefix 1`] = `
<Text
  style={
    Array [
      Object {
        "textAlignVertical": "top",
        "top": 2,
      },
      Object {
        "height": 24,
        "paddingRight": 8,
      },
      undefined,
      Object {
        "color": "black",
        "fontSize": 16,
        "textAlign": "left",
      },
    ]
  }
>
  a
</Text>
`;

exports[`renders suffix 1`] = `
<Text
  style={
    Array [
      Object {
        "textAlignVertical": "top",
        "top": 2,
      },
      Object {
        "height": 24,
        "paddingLeft": 8,
      },
      undefined,
      Object {
        "color": "black",
        "fontSize": 16,
        "textAlign": "right",
      },
    ]
  }
>
  z
</Text>
`;
